Implement apprehension and discharge of vehicles. Update documentation
